fix(select2): apply validation border color
Added `select2` form validation border colors to align with Bootstrap 5 `is-valid` and `is-invalid` classes.

--- a/css/admin.css
+++ b/css/admin.css
@@ -3076,6 +3076,14 @@ table td>input[type="checkbox"] {
 	line-height: 2rem !important;
 }
 
+select.is-valid + .select2-container .select2-selection {
+	border-color: var(--bs-success) !important;
+}
+
+select.is-invalid + .select2-container .select2-selection {
+	border-color: var(--bs-danger) !important;
+}
+
 .no-select,
 .nav,
 .navbar,
